# finance-tracker

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  README.md  devenv.nix  devenv.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: development-environment.md
docs/repo-audit-2026-05-07/: 00-executive-summary.md  01-methodology-and-evidence.md  02-cleanliness-and-maintainability.md  03-security-and-privacy.md  04-scalability-and-operations.md  05-reusable-analytics-platform.md  06-remediation-roadmap.md  07-evidence-appendix.md  README.md
sandbox/: mock_account.json  rules.example.yaml
scripts/: finance-all.sh
src/finance/: categorize.py  cli.py  config.py  sync.py  taxonomy.py
src/finance/analysis/: __init__.py  alerts.py  bank_profile.py  classify.py  enrich.py  forecast.py  io.py  memo.py  merchants.py  metric_specs.py  overview.py  recurring.py  reports.py  streams.py  subscriptions.py  totals.py  trends.py
src/finance/auth/: jwt.py  keys.py
src/finance/core/: __init__.py  analytics.py  usage.py
src/finance/data/: merchant_merges.yaml  merchants_seed.yaml  service_domains.yaml
src/finance/db/: schema.sql  store.py
src/finance/eb/: client.py  flows.py  models.py
src/finance/llm/: __init__.py  advise.py  advise_dispatch.py  categorize.py  client.py  providers.py
src/finance/llm/prompts/: advise_cutbacks_system.md  advise_integral_system.md  advise_subscriptions_system.md  categorize_system.md  taxonomy.yaml
src/finance/web/: app.py  dashboard.py  privacy.py  tls.py
src/finance/web/static/: app.css  app.js
src/finance/web/templates/: _account_row.html  _category_picker.html  _llm_categorize_result.html  _reenrich_result.html  _rules_table.html  _sync_result.html  _table.html  accounts.html  advice.html  alerts.html  base.html  connect.html  forecast.html  index.html  merchant_detail.html  merchants.html  overview.html  recurring.html  rules.html  settings.html  subscriptions.html  transactions.html
tests/: conftest.py  test_analysis_alerts.py  test_analysis_classify.py  test_analysis_enrich.py  test_analysis_forecast.py  test_analysis_io.py  test_analysis_memo.py  test_analysis_merchants.py  test_analysis_merchants_ops.py  test_analysis_overview.py  test_analysis_recurring.py  test_analysis_streams.py  test_analysis_subscriptions.py  test_analysis_totals.py  test_analysis_trends.py  test_bank_profile.py  test_cli_smoke.py  test_core_analytics.py  test_db_store.py  test_eb_client.py  test_jwt.py  test_llm_advise.py  test_llm_categorize.py  test_llm_providers.py  test_sync.py  test_web_dashboard.py  test_web_flow.py  web_client.py
